2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic: Added an ScrolledWindow.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic, EcmaUtils/EcmaReader.cs: Working
	  with the TextView widget.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
	  changes using EcmaUtils.
	* EcmaUtils/MyClass.cs, EcmaUtils/EcmaUtils.mdp,
	  EcmaUtils/EcmaReader.cs: Initial implementation of EcmaReader class
	  that handles the reading of the XML documentation.
	* EcmaUtils/AssemblyInfo.cs: Assembly Info for the EcmaUtils library.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
	  changes.

2007-06-12  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/monodoc.png, MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic: Using the same icon that monodoc
	  uses for app.
	* MonodocEditor/EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,
	  MonodocEditor/OpenDocDialog.cs: Adding some filters, events to the
	  OpenDoc dialog.
	* Packages.mdse: Adding package info for the editor.

2007-06-12  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,
	  MonodocEditor/gtk-gui/gui.stetic: GUI code added to get a
	  Filechooser when the open action is activated.
	* MonodocEditor/OpenDocDialog.cs, MonodocEditor.mds: Minor changes.
	* EcmaUtils/MyClass.cs, EcmaUtils/AssemblyInfo.cs,
	  EcmaUtils/EcmaUtils.mdp: Added to the solution the project for the